# bittle-x-sim

./: .geminiignore  .gitignore  .note  Cargo.toml  GEMINI.md  build-open-cat.sh  convert_stl_to_obj.py  update_urdf.sh
.zed/: settings.json
OpenCatEsp32/: OpenCatEsp32.ino
OpenCatEsp32/src/: OpenCat.h  configConstants.h  espServo.h  moduleManager.h  motion.h  reaction.h  skill.h  tools.h
OpenCatEsp32/src/PetoiESP32Servo/: ESP32Servo.h  ESP32Tone.h
docs/: 0176bf797d11b3fc.module.wasm  0b08f0b9859f3cb4.module.wasm  1039.bundle.js  1118.js  1122.js  1124.bundle.js  1124.js  115.bundle.js  1195.js  128.js  1282.js  1299.js  1387.js  1420.js  1438.js  1446.js  1560.js  1710.js  1740.js  1755.bundle.js  1888.js  1914.js  1941.js  198.js  205.js  2094.js  2184.js  2244.js  2257.bundle.js  2278.js  2339.bundle.js  2398.js  2571.js  2586.js  2601.bundle.js  2658.js  2686.js  2692.js  2723.bundle.js  2817.bundle.js  (+163 more)
docs/OpenCatEsp32/: bootloader_symbols.txt
docs/css/: editor.css  explorer.css  main.css  overlay.css  project-dialog.css  project-sidebar.css  serial-monitor.css  sidebar.css  sim.css
src/: builder.rs  main.rs
src/control/: mod.rs  servo_control.rs
www/: GEMINI.md  package-lock.json  package.json  rspack.config.js  tsconfig.json  webpack.config.js
www/src/: compile.ts  editor.ts  explorer.ts  filebar.ts  files.ts  index.ts  motion_button.ts  resize.ts  serial_monitor.ts  sidebar.ts  sim.ts  wasd.ts
www/src/assets/: OpenCatEsp32.ino  README.md  default.ino  (+1 more)
www/static/: CNAME  GEMINI.md  editor.css  index.html  petoi_logo.avif  robot.urdf  ui.css
(+17 files in other folders)
