[package]
name = "bittle-x-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
gorilla-physics = { path = "../gorilla-physics/"}
esp32rs = {path = "../esp32rs/"}
nalgebra = { version = "0.33", features = [] }
urdf-rs = "0.9.0"
futures = "0.3"
# [target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    'console',
    "Window",
    "Response",
    "Request",
    "Document",
    "Element",
    "Performance",
    "TextDecoder",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1"}


[lib]
name = "bittle_x"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "main"
path = "src/main.rs"
